--- a/application/build.gradle
+++ b/application/build.gradle
@@ -5,4 +5,10 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation "org.springframework.boot:spring-boot-starter-actuator"
+
+    testImplementation("com.h2database:h2:2.3.232")
+    testImplementation("org.springframework.graphql:spring-graphql-test")
+    testImplementation("org.assertj:assertj-core")
+    testImplementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    testImplementation("org.projectlombok:lombok")
 }
