--- a/application/src/test/resources/config/application-test.yaml
+++ b/application/src/test/resources/config/application-test.yaml
@@ -1,7 +1,11 @@
-server.port: 20101
 spring:
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: none
+  datasource:
+    url: jdbc:h2:file:../data-test/mydb
+
 
 logging.level:
   root: INFO
