--- a/dao-postgres/build.gradle
+++ b/dao-postgres/build.gradle
@@ -6,4 +6,5 @@ dependencies {
 
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.flywaydb:flyway-database-postgresql'
+    implementation 'org.apache.commons:commons-collections4:4.4'
 }
