--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,6 +2,7 @@ apply from: "${rootProject.rootDir}/gradle/graphql.gradle"
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'com.graphql-java:graphql-java-extended-scalars'
 }
 
 generateJava {
